--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
 
     "require-jsdoc": "off",
         "valid-jsdoc": "off",
-        "eol-last": "off"
+        "eol-last": "off",
+        "comma-dangle": "off"
     }
 }
