--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "test": "mocha",
     "coverage": "nyc npm test",
     "coveralls": "nyc npm test && nyc report --reporter=lcov",
-    "doc": "typedoc"
+    "doc": "typedoc",
+    "start": "tsc && node dist/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/chai": "^4.3.1",
+    "@types/express": "^4.17.13",
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.32",
     "@types/yargs": "^17.0.10",
@@ -22,6 +24,7 @@
     "chai": "^4.3.6",
     "eslint": "^8.15.0",
     "eslint-config-google": "^0.14.0",
+    "express": "^4.18.1",
     "mocha": "^10.0.0",
     "ts-node": "^10.7.0",
     "tsc-watch": "^5.0.3",
