--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "coverage": "nyc npm test",
     "coveralls": "nyc npm test && nyc report --reporter=lcov",
     "doc": "typedoc",
-    "start": "tsc && node dist/server.js"
+    "start": "tsc && node dist/mongoose.js"
   },
   "keywords": [],
   "author": "",
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "chalk": "^4.1.2",
+    "mongoose": "^5.13.14",
     "nyc": "^15.1.0",
     "typedoc": "^0.22.15",
     "yargs": "^17.4.1"
